changes images file names

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </ul>
           </nav>
           <ul>
-                <li> <a href="mailto: info@devstudio.com">info@devstudio.com</a>
+                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li> <a href=" ">+38 096 111 11 11</a>
                 </li>
@@ -57,13 +57,13 @@
             <h3>Чем мы занимаемся</h3>
             <ul class="activities images">
                 <li>
-                    <img src="./images/box 1.jpg" width="500" alt="box1">
+                    <img src="./images/box1.jpg" width="500" alt="box1">
                 </li>
                 <li>
-                    <img src="./images/box 2.jpg" width="500" alt="box2">
+                    <img src="./images/box2.jpg" width="500" alt="box2">
                 </li>
                 <li>
-                    <img src="./images/box 3.jpg" width="500" alt="box3">
+                    <img src="./images/box3.jpg" width="500" alt="box3">
                 </li>
             </ul>
 
@@ -73,16 +73,16 @@
             <h3>Наша команда</h3>
             <ul class="staff">
                 <li>
-                    <img src="./images/team card 1.jpg" width="375" alt="Игорь Демьяненко">
+                    <img src="./images/team_card1.jpg" width="375" alt="Игорь Демьяненко">
                 </li>
                 <li>
-                    <img src="./images/team card 2.jpg" width="375" alt="Ольга Репина">
+                    <img src="./images/team_card2.jpg" width="375" alt="Ольга Репина">
                 </li>
                 <li>
-                    <img src="./images/team card 3.jpg" width="375" alt="Николай Тарасов">
+                    <img src="./images/team_card3.jpg" width="375" alt="Николай Тарасов">
                 </li>
                 <li>
-                    <img src="./images/team card 4.jpg" width="375" alt="Михаил Ермаков">
+                    <img src="./images/team_card4.jpg" width="375" alt="Михаил Ермаков">
                 </li>
             </ul>
         </section>
