--- a/index.html
+++ b/index.html
@@ -53,54 +53,54 @@
             </ul>
         </section>
         <section class="activities">
-            <h2>Activity</h2>
-            <h3>Чем мы занимаемся</h3>
+            <h2>Чем мы занимаемся</h2>
             <ul class="activities images">
                 <li>
-                    <img src="./images/box1.jpg" width="500" alt="box1">
+                    <img src="./images/box1.jpg" width="370" alt="box1">
                 </li>
                 <li>
-                    <img src="./images/box2.jpg" width="500" alt="box2">
+                    <img src="./images/box2.jpg" width="370" alt="box2">
                 </li>
                 <li>
-                    <img src="./images/box3.jpg" width="500" alt="box3">
+                    <img src="./images/box3.jpg" width="370" alt="box3">
                 </li>
             </ul>
 
         </section>
         <section>
-            <h2>Our team</h2>
-            <h3>Наша команда</h3>
+           <h2>Наша команда</h2>
             <ul class="staff">
                 <li>
-                    <img src="./images/team_card1.jpg" width="375" alt="Игорь Демьяненко">
-                    <p>Игорь Демьяненко<br>Product Designer</p>
+                    <img src="./images/team_card1.jpg" width="270" alt="Игорь Демьяненко">
+                    <h3>Игорь Демьяненко</h3>
+                    <h4>Product Designer</h4>
                 </li>
                 <li>
-                    <img src="./images/team_card2.jpg" width="375" alt="Ольга Репина">
-                    <p>Ольга Репина<br>Frontend Developer</p>
+                    <img src="./images/team_card2.jpg" width="270" alt="Ольга Репина">
+                    <h3>Ольга Репина</h3>
+                    <h4>Frontend Developer</h4>
                 </li>
                 <li>
-                    <img src="./images/team_card3.jpg" width="375" alt="Николай Тарасов">
-                    <p>Николай Тарасов<br>Marketing</p>
+                    <img src="./images/team_card3.jpg" width="270" alt="Николай Тарасов">
+                    <h3>Николай Тарасов</h3>
+                    <h4>Marketing</h4>
                 </li>
                 <li>
-                    <img src="./images/team_card4.jpg" width="375" alt="Михаил Ермаков">
-                    <p>Михаил Ермаков<br>UI Designer</p>
+                    <img src="./images/team_card4.jpg" width="270" alt="Михаил Ермаков">
+                    <h3>Михаил Ермаков</h3>
+                    <h4>Marketing</h4>
                 </li>
             </ul>
         </section>
     </main>
 
    <footer>
-       <h3 class="Logo">WebStudio</h3>
+      <a href="" class="Logo">WebStudio</a>
        <address>
-           <ul>
-               <li>г. Киев, пр-т Леси Украинки, 26</li>
-               <li>info@example.com</li>
-               <li>+38 099 111 11 11</li>
-           </ul>
-       </address>
+           г. Киев, пр-т Леси Украинки, 26<br>
+            info@example.com<br>
+            +38 099 111 11 11<br>
+        </address>
    </footer>
     
     
