--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
                 <li>
                     <img src="./images/team_card1.jpg" width="270" alt="Игорь Демьяненко">
                     <h3>Игорь Демьяненко</h3>
-                    <h4>Product Designer</h4>
+                    <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team_card2.jpg" width="270" alt="Ольга Репина">
                     <h3>Ольга Репина</h3>
-                    <h4>Frontend Developer</h4>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team_card3.jpg" width="270" alt="Николай Тарасов">
                     <h3>Николай Тарасов</h3>
-                    <h4>Marketing</h4>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team_card4.jpg" width="270" alt="Михаил Ермаков">
                     <h3>Михаил Ермаков</h3>
-                    <h4>Marketing</h4>
+                    <p>Marketing</p>
                 </li>
             </ul>
         </section>
@@ -97,9 +97,9 @@
    <footer>
       <a href="" class="Logo">WebStudio</a>
        <address>
-           г. Киев, пр-т Леси Украинки, 26<br>
-            info@example.com<br>
-            +38 099 111 11 11<br>
+           <li>г. Киев, пр-т Леси Украинки, 2</li>
+           <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></li>
         </address>
    </footer>
     
