--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
    <footer>
       <a href="" class="Logo">WebStudio</a>
        <address>
-           <li>г. Киев, пр-т Леси Украинки, 2</li>
+           <li> 
+               <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+2,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4380034,30.5231071,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf01cf686589:0x1debb33ce8d40a66!8m2!3d50.4380034!4d30.5252958?hl=ru">г. Киев, пр-т Леси Украинки, 2</a>
+           </li>
            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></li>
+           <li><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></li>
         </address>
    </footer>
     
